--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
+    "@tabler/icons": "^1.119.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
